fix cat form input height and vert spacing

--- a/atomic-core/css/main.css
+++ b/atomic-core/css/main.css
@@ -812,16 +812,18 @@ pre[class*="language-"] {
 /* line 25, molecules/_cat-form.scss */
 .cat-form-group .atomic-sub-form .form-control {
   background: #3F434E;
+  margin-bottom: 7px;
+  height: 40px;
 }
-/* line 28, molecules/_cat-form.scss */
+/* line 30, molecules/_cat-form.scss */
 .cat-form-group ::-webkit-input-placeholder {
   color: #626673;
 }
-/* line 31, molecules/_cat-form.scss */
+/* line 33, molecules/_cat-form.scss */
 .cat-form-group .form-control {
   color: #B9B9B9;
 }
-/* line 34, molecules/_cat-form.scss */
+/* line 36, molecules/_cat-form.scss */
 .cat-form-group .fa {
   position: absolute;
   right: 10px;
@@ -829,12 +831,12 @@ pre[class*="language-"] {
   cursor: pointer;
 }
 
-/* line 43, molecules/_cat-form.scss */
+/* line 45, molecules/_cat-form.scss */
 .cat-form {
   margin-top: 10px;
 }
 
-/* line 48, molecules/_cat-form.scss */
+/* line 50, molecules/_cat-form.scss */
 .js-showContent {
   display: none;
 }
