--- a/atomic-core/scss/molecules/_cat-form.scss
+++ b/atomic-core/scss/molecules/_cat-form.scss
@@ -24,6 +24,8 @@
 	transition:all .5s;
 	.atomic-sub-form .form-control {
 	    background: #3F434E;
+	    margin-bottom: 7px;
+	    height: 40px;
 	}
 	::-webkit-input-placeholder {
 		 color: #626673;
